# util

./: README.md  meson.build
src/: ini_parse.h  recurse.h  utf8.h  util.h
test/: ini_parse.c  recurse.c  test.h  utf8.c
